--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Store image
+      uses: actions/upload-artifact@v2
+      # 在 with 中定义的选项将传递给上传操作
+      with:
+        name: docker-image
+        path: runtime_ub20:$(date +%s)
