--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,11 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag runtime_ub20:v1
+
+    - uses: actions/upload-artifact@v2
     - name: Store image
-      uses: actions/upload-artifact@v2
+      run: docker save runtime_ub20:v1 -o runtime_img.tar
       # 在 with 中定义的选项将传递给上传操作
-      with:
+    - with:
         name: docker-image
-        path: runtime_ub20:v1
+        path: runtime_img.tar
