--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,12 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag runtime_ub20:v1
-
-    - uses: actions/upload-artifact@v2
+      run: docker build . --file Dockerfile --tag runtime_ub20:v1 && docker save runtime_ub20:v1 -o runtime_img.tar
+      
     - name: Store image
-      run: docker save runtime_ub20:v1 -o runtime_img.tar
-      # 在 with 中定义的选项将传递给上传操作
-    - with:
+      uses: actions/upload-artifact@v2
+      with:
         name: docker-image
         path: runtime_img.tar
